--- a/mobile-first-development/index.html
+++ b/mobile-first-development/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front-end foundations: Mobile-first development</title>
+    <title>Front-end foundations: Responsive images</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
@@ -19,37 +19,14 @@
         <h2>Group #1 Heading</h2>
         <!-- Group #1 with 3 items -->
         <div class="group">
-          <div class="item item-double">
-            <h3>Item 1</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p>
-              dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua.
-            </p>
+          <div class="item">
+            <img src="images/watermelon1.jpg" alt="" />
           </div>
           <div class="item">
-            <h3>Item 2</h3>
-            <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-              cupidatat non proident, sunt in culpa qui officia deserunt mollit
-              anim id est laborum. Quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <img src="images/watermelon2.jpg" alt="" />
           </div>
           <div class="item">
-            <h3>Item 3</h3>
-            <p>
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
+            <img src="images/watermelon3.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -59,23 +36,10 @@
         <!-- Group #2 with 2 items -->
         <div class="group">
           <div class="item">
-            <h3>Item 1</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <img src="images/pineapple.jpg" alt="" />
           </div>
-          <div class="item item-double">
-            <h3>Item 2</h3>
-            <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-              cupidatat non proident, sunt in culpa qui officia deserunt mollit
-              anim id est laborum. Quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+          <div class="item">
+            <img src="images/icecream.jpg" alt="" />
           </div>
         </div>
       </section>
@@ -85,32 +49,16 @@
         <!-- Group #3 with 4 items -->
         <div class="group">
           <div class="item">
-            <h3>Item 1</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </div>
-          <div class="item item-double">
-            <h3>Item 2</h3>
-            <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-              cupidatat non proident, sunt in culpa qui officia deserunt mollit
-              anim id est laborum. Quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+            <img src="images/water1.jpg" alt="" />
           </div>
           <div class="item">
-            <h3>Item 3</h3>
-            <p>
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
+            <img src="images/water2.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="images/water3.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="images/water4.jpg" alt="" />
           </div>
         </div>
       </section>
